# home-server-python

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  home-server-db.db  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
alembic/versions/: 489d5cef5d9e_hello_world_table.py
app/: main.py
app/api/: healthz.py
audio_streamer/: Cargo.toml  encoded.opus
audio_streamer/src/: lib.rs  main.rs
audio_streamer/src/audio/: audio_pipeline.rs  broadcasting.rs  cpal_stream.rs  encoder_worker.rs  mod.rs  stream_metadata.rs  workers_manager.rs
audio_streamer/src/server/: comm_protocol.rs  mod.rs  server.rs
audio_streamer/src/utils/: cell.rs  mod.rs  ring_buffer.rs  sanity_checks.rs  sync.rs
docker-entrypoint-initdb.d/: 01-init.sh
docker-entrypoint-initdb.d/sql/: permissions.sql
media_server/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
media_server/src/alembic/: env.py
media_server/src/app/: main.py
media_server/src/app/api/: dependencies.py  healthz.py  ws_stream.py
media_server/src/app/db/: models.py
media_server/src/app/streaming/: __init__.py
media_server/src/app/streaming/audio_backend/: __init__.py  client.py  comm_protocol_models.py
media_server/src/app/streaming/client_session/: session.py
media_server/src/app/streaming/sessions_manager/: sessions_manager.py
media_server/static/: audio_stream.html
media_server/static/js/: main.js  opus-decoder.min.js.map
media_server/tests/integration/: test_healthz.py
tests/integration/: test_healthz.py
