[package]
name = "audio_streamer"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.16"
rand = "0.9.2"
cpal = "0.16.0"
anyhow = "1.0.99"
loom = "0.7.2"
ctor = "0.5.0" # fuck you rust
opusic-c = "1.5.3"
hound = "3.5.1"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
crossbeam-channel = "0.5.15"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
dashmap = "6.1.0"
event-listener = "5.4.1"


[target.'cfg(loom)'.dependencies]
loom = "0.7.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }